Whoops, missed an instance of the generic (to be renamed) app name.

--- a/app_prototype/public/index.html
+++ b/app_prototype/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Project_prototype</title>
+  <title>App Prototype</title>
   <link href="/assets/application.css?body=1" media="all" rel="stylesheet" type="text/css"/>
   <script src="/assets/jquery.js?body=1" type="text/javascript"></script>
   <script src="/assets/jquery_ujs.js?body=1" type="text/javascript"></script>
