--- a/app_prototype/public/index.html
+++ b/app_prototype/public/index.html
@@ -15,7 +15,7 @@
           <div class="container">
             <div class="brand">Project_prototype</div>
             <ul class="nav pull-right">
-              <li><a href="/sign_in">Sign in</a></li>
+              <li><a href="/sign_in">Sign In</a></li>
             </ul>
           </div>
         </nav>
@@ -29,7 +29,7 @@
         <p>Custom generator templates create views that are bootstrap compatible and specs that are factory-aware and follow best practices.</p>
         <p>This application also includes authentication and an example of authorization (sign in as user@example.com / password).</p>
 
-        <p><a class="btn btn-primary btn-large" href="sign_in">Sign in</a></p>
+        <p><a class="btn btn-primary btn-large" href="sign_in">Sign In</a></p>
       </div>
     </div>
     <div class="push"></div>
