Handle arguments with dashes (instead of underscores) and be sure to catch all replacement strings.

--- a/app_prototype/public/index.html
+++ b/app_prototype/public/index.html
@@ -13,7 +13,7 @@
       <header class="navbar navbar-fixed-top">
         <nav class="navbar-inner">
           <div class="container">
-            <div class="brand">Project_prototype</div>
+            <div class="brand">App Prototype</div>
             <ul class="nav pull-right">
               <li><a href="/sign_in">Sign In</a></li>
             </ul>
